# src/generated/openapi/api/openapi.yaml
@@ -85,6 +85,27 @@ paths:
       tags:
       - dictionary-controller
       x-accepts: application/json
+  /api/dict/enrichWithExamples:
+    post:
+      operationId: enrichWithExamples
+      parameters:
+      - explode: true
+        in: query
+        name: word
+        required: true
+        schema:
+          type: string
+        style: form
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/WordDto'
+          description: OK
+      tags:
+      - dictionary-controller
+      x-accepts: '*/*'
   /api/word/{id}:
     get:
       operationId: getWordById
@@ -417,6 +438,9 @@ components:
         userId: 6
         englishCnt: 1
         ukrainianCnt: 5
+        examples:
+        - examples
+        - examples
         lastTrain: 2000-01-23T04:56:07.000+00:00
         english: english
         id: 0
@@ -474,6 +498,10 @@ components:
         rarity:
           format: int32
           type: integer
+        examples:
+          items:
+            type: string
+          type: array
       type: object
     WordsPageDtoWordDto:
       example:
@@ -490,6 +518,9 @@ components:
           userId: 6
           englishCnt: 1
           ukrainianCnt: 5
+          examples:
+          - examples
+          - examples
           lastTrain: 2000-01-23T04:56:07.000+00:00
           english: english
           id: 0
@@ -504,6 +535,9 @@ components:
           userId: 6
           englishCnt: 1
           ukrainianCnt: 5
+          examples:
+          - examples
+          - examples
           lastTrain: 2000-01-23T04:56:07.000+00:00
           english: english
           id: 0
@@ -625,6 +659,11 @@ components:
       type: object
     DictWord:
       example:
+        examples:
+        - id: 7
+          example: example
+        - id: 7
+          example: example
         translations:
         - wordText: wordText
           id: 4
@@ -668,6 +707,10 @@ components:
           items:
             $ref: '#/components/schemas/DictTrans'
           type: array
+        examples:
+          items:
+            $ref: '#/components/schemas/DictWordExamples'
+          type: array
       type: object
     DictWordDefinition:
       example:
@@ -681,6 +724,17 @@ components:
         partOfSpeach:
           type: string
         definitionText:
+          type: string
+      type: object
+    DictWordExamples:
+      example:
+        id: 7
+        example: example
+      properties:
+        id:
+          format: int64
+          type: integer
+        example:
           type: string
       type: object
     DictWordForm:
@@ -713,6 +767,11 @@ components:
           id: 5
         userId: 6
         dictWord:
+          examples:
+          - id: 7
+            example: example
+          - id: 7
+            example: example
           translations:
           - wordText: wordText
             id: 4
